--- a/lib/locales/fr.json
+++ b/lib/locales/fr.json
@@ -12,7 +12,7 @@
   },
   "home": {
     "welcomeMessage": "Bienvenue Orange Digital Center Mali",
-    "eLearningPlatform": "Plateforme e-learning",
+    "eLearningPlatform": "Plateforme d'Autoformation E-Learning",
     "becomeExpert": "Devenez Expert Cloud & Data",
     "masterAWS": "Maîtrisez AWS, Azure et la Data Science avec nos nouveaux parcours certifiants.",
     "developSkills": "Développez vos compétences Tech",
