--- a/lib/locales/en.json
+++ b/lib/locales/en.json
@@ -11,8 +11,8 @@
     "searchPlaceholder": "Search for courses..."
   },
   "home": {
-    "welcomeMessage": "Welcome Orange Digital Center Mali",
-    "eLearningPlatform": "e-Learning platform",
+    "welcomeMessage": "Welcome Orange Digital Center's Self-Learning Platform",
+    "eLearningPlatform": "Self-Learning Platform",
     "becomeExpert": "Become a Cloud & Data Expert",
     "masterAWS": "Master AWS, Azure and Data Science with our new certified courses.",
     "developSkills": "Develop your Tech skills",
