--- a/lib/locales/fr.json
+++ b/lib/locales/fr.json
@@ -11,8 +11,8 @@
     "searchPlaceholder": "Rechercher des cours..."
   },
   "home": {
-    "welcomeMessage": "Bienvenue Orange Digital Center Mali",
-    "eLearningPlatform": "Plateforme d'Autoformation E-Learning",
+    "welcomeMessage": "Welcome Orange Digital Center's Self-Learning Platform",
+    "eLearningPlatform": "Self-Learning Platform",
     "becomeExpert": "Devenez Expert Cloud & Data",
     "masterAWS": "Maîtrisez AWS, Azure et la Data Science avec nos nouveaux parcours certifiants.",
     "developSkills": "Développez vos compétences Tech",
